# pgtuskmaster_rust

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DEEP_REVIEW_SUMMARY.md  Makefile  README.md  RUST_SYSTEM_HARNESS_PLAN.md  btca.config.jsonc  docker-compose.yml
.agents/skills/add-bug/: SKILL.md
.agents/skills/add-task-as-agent/: SKILL.md
.agents/skills/add-task-as-user/: SKILL.md
.agents/skills/ask-k2/: SKILL.md  ask-k2.sh  opencode.json
.agents/skills/ask-k2-docs/: SKILL.md
.claude/: max_count_prompt.txt  pretooluse-hook.sh  sample_transcript.jsonl  settings.local.json  test-hook.sh
.codex/: config.toml
.codex/agents/: spark_review.toml
.config/: nextest.toml
.githooks/: post-commit
.ralph/: current_task.txt  current_tasks.md  current_tasks_done.md  email.sh  email_crash.sh  email_get_iteration.sh  event_watch.sh  model.txt  opencode_gpt.json  progress_append.sh  progress_read.sh  ralph-choose-task.md  ralph-do-task.md  ralph-email-watcher.sh  ralph-list.sh  ralph-status.sh  ralph-stop.md  ralph-worker.sh  ralph.sh  task_get_iteration.sh  task_history.txt  task_switch.sh  test_cycle_task_path.txt  total_price.sh  update_task_summary.sh
.ralph/evidence/: full_test_per_test_times.tsv  meta-18-pass1-latest.txt  meta-18-pass2-latest.path  meta-18-pass3-latest.path  meta-18-pass4-latest.txt
.ralph/progress/: 0.jsonl  1.jsonl  10.jsonl  100.jsonl  101.jsonl  102.jsonl  103.jsonl  104.jsonl  105.jsonl  106.jsonl  107.jsonl  108.jsonl  109.jsonl  11.jsonl  110.jsonl  111.jsonl  112.jsonl  113.jsonl  114.jsonl  115.jsonl  116.jsonl  117.jsonl  118.jsonl  119.jsonl  12.jsonl  120.jsonl  121.jsonl  122.jsonl  123.jsonl  124.jsonl  125.jsonl  126.jsonl  127.jsonl  128.jsonl  129.jsonl  13.jsonl  130.jsonl  131.jsonl  132.jsonl  133.jsonl  (+171 more)
.ralph/systemd/: opencode-ralph.service  ralph-event-watch.service
crates/pgtuskmaster_test_support/: Cargo.toml
cucumber_tests/docker/: Dockerfile
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  compose.yml  docker-compose.node.yml  entrypoint.sh  node-a.toml  node-b.toml  node-c.toml  pgtm.toml
docker/certs/: ca.crt  ca.srl
docker/compose/: docker-compose.cluster.yml  docker-compose.single.yml
docker/pg/: pg_hba.conf  pg_ident.conf
docker/secrets/: postgres-superuser.password.example  replicator.password.example  rewinder.password.example
docs/: book.toml  mermaid.min.js
docs/drafts/: diataxis-run-checklist.md  explanation-dcs-trust-and-ha-gating-draft-1.md  explanation-replica-recovery-paths-draft-1.md  explanation-replica-recovery-paths-draft-2.md  explanation-runtime-control-loop-draft-1.md  explanation-runtime-control-loop-draft-2.md  reference-config-draft-1.md  reference-dcs-draft-1.md  reference-ha-draft-1.md  reference-ha-draft-2.md
docs/examples/: docker-cluster-node-a.toml  docker-cluster-node-b.toml  docker-cluster-node-c.toml  docker-single-node-a.toml
docs/src/: SUMMARY.md  architecture.md  components.md  docs-style.md  glossary.md  introduction.md  operations.md  overview.md  reading-guide.md
docs/tmp/: build_reference_prompts.sh  ha-replica-stopped-primary-stays-primary-output.txt
examples/: debug_ui_smoke_server.rs
scripts/: publish-docs.sh
src/: lib.rs  local_physical.rs  postgres_managed.rs  postgres_managed_conf.rs  postgres_roles.rs  self_exe.rs  tls.rs  wal.rs  wal_passthrough.rs  worker_contract_tests.rs
src/api/: controller.rs  events.rs  fallback.rs  mod.rs  startup.rs  worker.rs
src/backup/: archive_command.rs  mod.rs  pgbackrest.rs  provider.rs  worker.rs
src/cli/: args.rs  client.rs  config.rs  connect.rs  debug.rs  error.rs  mod.rs  output.rs  status.rs  switchover.rs
src/config/: defaults.rs  endpoint.rs  materialize.rs  mod.rs  parser.rs  schema.rs
src/dcs/: DESIGN.md  command.rs  etcd_store.rs  keys.rs  log_event.rs  mod.rs  startup.rs  state.rs  store.rs  view.rs  worker.rs
src/debug_api/: mod.rs  snapshot.rs  view.rs  worker.rs
src/dev_support/: api.rs  auth.rs  binaries.rs  etcd3.rs  mod.rs  namespace.rs  pg16.rs  provenance.rs  runtime_config.rs  tls.rs
src/ha/: actions.rs  apply.rs  decide.rs  decision.rs  e2e_multi_node.rs  e2e_partition_chaos.rs  events.rs  lower.rs  mod.rs  process_dispatch.rs  reconcile.rs  source_conn.rs  startup.rs  state.rs  test_observer.rs  types.rs  worker.rs
src/logging/: archive_wrapper.rs  event.rs  mod.rs  postgres_ingest.rs  raw_record.rs  tailer.rs
src/pginfo/: conninfo.rs  log_event.rs  mod.rs  query.rs  startup.rs  state.rs  worker.rs
src/postgres/: managed.rs  managed_conf.rs  mod.rs  roles.rs
src/process/: jobs.rs  log_event.rs  mod.rs  postmaster.rs  source.rs  startup.rs  state.rs  worker.rs
src/runtime/: log_event.rs  mod.rs  node.rs
src/state/: coordination.rs  errors.rs  ids.rs  mod.rs  net.rs  time.rs  watch_state.rs
src/test_harness/: api.rs  auth.rs  binaries.rs  etcd3.rs  mod.rs  namespace.rs  net_proxy.rs  pg16.rs  ports.rs  provenance.rs  runtime_config.rs  signals.rs  tls.rs
tests/: AGENTS.md  bdd_api_http.rs  bdd_state_watch.rs  cli_binary.rs  ha.rs  ha_multi_node_failover.rs  ha_multi_node_failsafe.rs  ha_multi_node_stress.rs  ha_partition_isolation.rs  ha_partition_recovery.rs  nextest_config_contract.rs  policy_e2e_api_only.rs  wal_passthrough.rs
tests/docker/: Dockerfile  entrypoint.sh
tests/ha/: harness.toml
tools/: check-orphan-rust-files.py  docs-architecture-no-code-guard.sh  docs-claim-ledger.py  docs-mermaid-lint.mjs  docs-scope-map.py  export-nextest-junit-logs.py  gate-step.sh  install-cargo-nextest.sh  install-common.sh  install-docs-node-deps.sh  install-etcd.sh  install-mdbook-mermaid.sh  install-mdbook.sh  install-pgbackrest.sh  install-postgres16.sh  lint-no-silent-errors.sh  package-lock.json  package.json  prepare-filtered-pr.sh  real-binaries-policy.json  test-long-parallel.sh  trace-real-binary-execve.sh
tools/docker/: check-daemon.sh  cleanup-ha-compose-projects.py  cluster.sh  common.sh  compose-config-check.sh  smoke-cluster.sh  smoke-single.sh
tools/nextest/: setup-ha-cucumber-image.sh
(+1216 files in other folders)
