[package]
name = "pgtuskmaster_rust"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "process", "net", "io-util", "fs", "signal"] }
tokio-postgres = "0.7.13"
toml = "0.8.20"
httparse = "1.10.1"
etcd-client = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23.28", features = ["ring"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
cucumber = "0.22.1"
futures = "0.3.31"
rcgen = "0.14.5"
x509-parser = "0.18.1"

[[test]]
name = "ha_primary_killed_then_rejoins_as_replica"
path = "cucumber_tests/ha/features/ha_primary_killed_then_rejoins_as_replica/ha_primary_killed_then_rejoins_as_replica.rs"

[[test]]
name = "ha_replica_stopped_primary_stays_primary"
path = "cucumber_tests/ha/features/ha_replica_stopped_primary_stays_primary/ha_replica_stopped_primary_stays_primary.rs"

[[test]]
name = "ha_two_replicas_stopped_then_one_replica_restarted_restores_quorum"
path = "cucumber_tests/ha/features/ha_two_replicas_stopped_then_one_replica_restarted_restores_quorum/ha_two_replicas_stopped_then_one_replica_restarted_restores_quorum.rs"

[[test]]
name = "ha_all_nodes_stopped_then_two_nodes_restarted_then_final_node_rejoins"
path = "cucumber_tests/ha/features/ha_all_nodes_stopped_then_two_nodes_restarted_then_final_node_rejoins/ha_all_nodes_stopped_then_two_nodes_restarted_then_final_node_rejoins.rs"

[[test]]
name = "ha_replica_flapped_primary_stays_primary"
path = "cucumber_tests/ha/features/ha_replica_flapped_primary_stays_primary/ha_replica_flapped_primary_stays_primary.rs"

[[test]]
name = "ha_planned_switchover_changes_primary_cleanly"
path = "cucumber_tests/ha/features/ha_planned_switchover_changes_primary_cleanly/ha_planned_switchover_changes_primary_cleanly.rs"

[[test]]
name = "ha_targeted_switchover_promotes_requested_replica"
path = "cucumber_tests/ha/features/ha_targeted_switchover_promotes_requested_replica/ha_targeted_switchover_promotes_requested_replica.rs"

[[test]]
name = "ha_planned_switchover_with_concurrent_writes"
path = "cucumber_tests/ha/features/ha_planned_switchover_with_concurrent_writes/ha_planned_switchover_with_concurrent_writes.rs"

[[test]]
name = "ha_primary_killed_with_concurrent_writes"
path = "cucumber_tests/ha/features/ha_primary_killed_with_concurrent_writes/ha_primary_killed_with_concurrent_writes.rs"

[[test]]
name = "ha_targeted_switchover_to_degraded_replica_is_rejected"
path = "cucumber_tests/ha/features/ha_targeted_switchover_to_degraded_replica_is_rejected/ha_targeted_switchover_to_degraded_replica_is_rejected.rs"

[[test]]
name = "ha_primary_killed_custom_roles_survive_rejoin"
path = "cucumber_tests/ha/features/ha_primary_killed_custom_roles_survive_rejoin/ha_primary_killed_custom_roles_survive_rejoin.rs"

[[test]]
name = "ha_basebackup_clone_blocked_then_unblocked_replica_recovers"
path = "cucumber_tests/ha/features/ha_basebackup_clone_blocked_then_unblocked_replica_recovers/ha_basebackup_clone_blocked_then_unblocked_replica_recovers.rs"

[[test]]
name = "ha_rewind_fails_then_basebackup_rejoins_old_primary"
path = "cucumber_tests/ha/features/ha_rewind_fails_then_basebackup_rejoins_old_primary/ha_rewind_fails_then_basebackup_rejoins_old_primary.rs"

[[test]]
name = "ha_repeated_failovers_preserve_single_primary"
path = "cucumber_tests/ha/features/ha_repeated_failovers_preserve_single_primary/ha_repeated_failovers_preserve_single_primary.rs"

[[test]]
name = "ha_lagging_replica_is_not_promoted_during_failover"
path = "cucumber_tests/ha/features/ha_lagging_replica_is_not_promoted_during_failover/ha_lagging_replica_is_not_promoted_during_failover.rs"

[[test]]
name = "ha_dcs_quorum_lost_enters_failsafe"
path = "cucumber_tests/ha/features/ha_dcs_quorum_lost_enters_failsafe/ha_dcs_quorum_lost_enters_failsafe.rs"

[[test]]
name = "ha_dcs_quorum_lost_fencing_blocks_post_cutoff_writes"
path = "cucumber_tests/ha/features/ha_dcs_quorum_lost_fencing_blocks_post_cutoff_writes/ha_dcs_quorum_lost_fencing_blocks_post_cutoff_writes.rs"

[[test]]
name = "ha_old_primary_partitioned_from_majority_majority_elects_new_primary"
path = "cucumber_tests/ha/features/ha_old_primary_partitioned_from_majority_majority_elects_new_primary/ha_old_primary_partitioned_from_majority_majority_elects_new_primary.rs"

[[test]]
name = "ha_replica_partitioned_from_majority_primary_stays_primary"
path = "cucumber_tests/ha/features/ha_replica_partitioned_from_majority_primary_stays_primary/ha_replica_partitioned_from_majority_primary_stays_primary.rs"

[[test]]
name = "ha_old_primary_partitioned_then_healed_rejoins_as_replica_after_majority_failover"
path = "cucumber_tests/ha/features/ha_old_primary_partitioned_then_healed_rejoins_as_replica_after_majority_failover/ha_old_primary_partitioned_then_healed_rejoins_as_replica_after_majority_failover.rs"

[[test]]
name = "ha_non_primary_api_isolated_primary_stays_primary"
path = "cucumber_tests/ha/features/ha_non_primary_api_isolated_primary_stays_primary/ha_non_primary_api_isolated_primary_stays_primary.rs"

[[test]]
name = "ha_replication_path_isolated_then_healed_replicas_catch_up"
path = "cucumber_tests/ha/features/ha_replication_path_isolated_then_healed_replicas_catch_up/ha_replication_path_isolated_then_healed_replicas_catch_up.rs"

[[test]]
name = "ha_dcs_and_api_faults_then_healed_cluster_converges"
path = "cucumber_tests/ha/features/ha_dcs_and_api_faults_then_healed_cluster_converges/ha_dcs_and_api_faults_then_healed_cluster_converges.rs"

[[test]]
name = "ha_primary_storage_stalled_then_new_primary_takes_over"
path = "cucumber_tests/ha/features/ha_primary_storage_stalled_then_new_primary_takes_over/ha_primary_storage_stalled_then_new_primary_takes_over.rs"

[[test]]
name = "ha_two_nodes_stopped_then_one_healthy_node_restarted_restores_service_while_other_stays_broken"
path = "cucumber_tests/ha/features/ha_two_nodes_stopped_then_one_healthy_node_restarted_restores_service_while_other_stays_broken/ha_two_nodes_stopped_then_one_healthy_node_restarted_restores_service_while_other_stays_broken.rs"

[[test]]
name = "ha_broken_replica_rejoin_attempt_does_not_destabilize_quorum"
path = "cucumber_tests/ha/features/ha_broken_replica_rejoin_attempt_does_not_destabilize_quorum/ha_broken_replica_rejoin_attempt_does_not_destabilize_quorum.rs"
